# RenderBoi

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GLTest.sln  GLTest.vcxproj  GLTest.vcxproj.filters  LICENSE.md  README.md  RenderBoi model.mdj  RenderBoi.sln  RenderBoi.vcxproj  RenderBoi.vcxproj.filters  cmake_defines.config.hpp  cmake_defines.hpp  copy_assets.bat  list.todo  main.cpp  project_macros.config.hpp  project_macros.hpp  scene_upgrade.todo  stb_image.cpp
renderboi/: CMakeLists.txt  main.cpp  main_functions.cpp  main_functions.hpp  project_env.hpp  project_macros.hpp  renderboi_parameters.hpp
renderboi/config/: project_env.config.hpp  project_macros.config.hpp
renderboi/core/: CMakeLists.txt  camera.cpp  camera.hpp  color.hpp  common_macros.hpp  factory.cpp  factory.hpp  frame_of_reference.hpp  framebuffer.cpp  framebuffer.hpp  input_processor.hpp  material.cpp  material.hpp  materials.hpp  mesh.cpp  mesh.hpp  mesh_generator.hpp  numeric.hpp  object_transform.cpp  object_transform.hpp  pixel_space.hpp  shadow_map.cpp  shadow_map.hpp  texture_2d.cpp  texture_2d.hpp  transform.cpp  transform.hpp  vertex.hpp
renderboi/core/3d/: affine.hpp  basis.cpp  basis.hpp  basis_provider.hpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  transform.cpp  transform.hpp  vertex.hpp
renderboi/core/common/: parent_dependent_vp_matrix_provider.cpp  parent_dependent_vp_matrix_provider.hpp
renderboi/core/implementation/: parent_dependent_vp_matrix_provider.cpp  parent_dependent_vp_matrix_provider.hpp
renderboi/core/interfaces/: basis_provider.hpp  vp_matrix_provider.hpp
renderboi/core/lights/: directional_light.cpp  directional_light.hpp  light.cpp  light.hpp  light_common.hpp  light_type.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp  tools.cpp  tools.hpp
renderboi/core/mesh_generators/: axes_generator.cpp  axes_generator.hpp  cube_generator.cpp  mesh_type.hpp  plane_generator.cpp  tetrahedron_generator.cpp  type_to_gen_mapping.hpp
renderboi/core/scene/: component_type.hpp  input_processing_script.cpp  input_processing_script.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  script.hpp
renderboi/core/scripts/: camera_aspect_ratio_script.hpp  mouse_camera_script.hpp
renderboi/core/shader/: shader.cpp  shader.hpp  shader_builder.cpp  shader_builder.hpp  shader_config.cpp  shader_config.hpp  shader_feature.cpp  shader_feature.hpp  shader_info.cpp  shader_info.hpp  shader_program.cpp  shader_program.hpp  shader_stage.cpp  shader_stage.hpp
renderboi/core/ubo/: common.hpp  light_ubo.cpp  light_ubo.hpp  matrix_ubo.cpp  matrix_ubo.hpp  ubo_info.hpp  ubo_layout.hpp  uniform_buffer_object.hpp
renderboi/examples/: .gitignore  CMakeLists.txt  gl_sandbox.cpp  gl_sandbox.hpp  gl_sandbox_parameters.hpp  gl_sandbox_runner.hpp  lighting_sandbox.cpp  lighting_sandbox.hpp  main.cpp  main_functions.cpp  main_functions.hpp  project_env.config.hpp  project_env.hpp  renderboi_parameters.hpp  sane_windows.h  shadow_sandbox.cpp  shadow_sandbox.hpp
renderboi/toolbox/: CMakeLists.txt  common.hpp  common_macros.hpp  factory.cpp  factory.hpp  input_logger.cpp  input_logger.hpp  input_processing_script.cpp  input_processing_script.hpp  input_splitter.cpp  input_splitter.hpp  mesh_generator.hpp  script.cpp  script.hpp
renderboi/toolbox/controls/: action_event_receiver.hpp  control.cpp  control.hpp  control_binding_provider.hpp  control_event_translator.hpp  control_scheme.hpp  control_scheme_manager.hpp  controlled_entity_manager.hpp
renderboi/toolbox/interfaces/: action_event_receiver.hpp  control_binding_provider.hpp  default_control_scheme_provider.hpp  event_receiver.hpp  mesh_generator.hpp  transform_proxy.hpp
renderboi/toolbox/mesh_generators/: all_mesh_generators.hpp  axes_generator.cpp  axes_generator.hpp  cube_generator.cpp  cube_generator.hpp  mesh_generator.hpp  mesh_type.hpp  plane_generator.cpp  plane_generator.hpp  tetrahedron_generator.cpp  tetrahedron_generator.hpp  torus_generator.cpp  torus_generator.hpp  type_to_gen_mapping.hpp
renderboi/toolbox/render/: composite_renderer.cpp  composite_renderer.hpp  mesh_composite_renderer.hpp  render_trait.hpp  render_trait_config.hpp  scene_renderer.cpp  scene_renderer.hpp
renderboi/toolbox/runnables/: basic_window_manager.cpp  basic_window_manager.hpp  camera_aspect_ratio_manager.cpp  camera_aspect_ratio_manager.hpp  gamepad_camera_manager.cpp  gamepad_camera_manager.hpp  gamepad_movement_script.cpp  gamepad_movement_script.hpp  input_logger.cpp  input_logger.hpp  keyboard_movement_script.cpp  keyboard_movement_script.hpp  mouse_camera_manager.cpp  mouse_camera_manager.hpp
renderboi/toolbox/scene/: component.cpp  component.hpp  component_type.hpp  object.hpp  object_transform.cpp  object_transform.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  scene_object_metadata.hpp  scene_renderer.cpp  scene_renderer.hpp
renderboi/toolbox/scripts/: basic_input_manager.cpp  basic_input_manager.hpp  basic_window_manager.cpp  basic_window_manager.hpp  camera_aspect_ratio_script.cpp  camera_aspect_ratio_script.hpp  keyboard_movement_script.cpp  keyboard_movement_script.hpp  lambda_script.hpp  mouse_camera_script.cpp  mouse_camera_script.hpp
renderboi/utilities/: CMakeLists.txt  gl_utilities.cpp  gl_utilities.hpp  resource_locator.cpp  resource_locator.hpp  to_string.hpp
renderboi/window/: CMakeLists.txt  critical_event_manager.cpp  critical_event_manager.hpp  enums.cpp  enums.hpp  env_info.hpp  gamepad_manager.hpp  gamepad_state.hpp  gl_context_client.cpp  gl_context_client.hpp  gl_window.cpp  gl_window.hpp  gl_window_critical_event.hpp  input_processor.cpp  input_processor.hpp  monitor.cpp  monitor.hpp  tools.cpp  tools.hpp  window_backend.hpp  window_creation_parameters.hpp  window_factory.cpp  window_factory.hpp
renderboi/window/config/: env_info.config.hpp
renderboi/window/event/: critical_event_manager.cpp  critical_event_manager.hpp  gl_context_event.cpp  gl_context_event.hpp  gl_context_event_manager.cpp  gl_context_event_manager.hpp  (+1 more)
tests/: CMakeLists.txt
(+439 files in other folders)
